Formatting tex documents

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2,6 +2,9 @@
 
 \usepackage[margin=1in]{geometry}
 
+\setlength{\parskip}{1em}
+\setlength{\parindent}{0pt}
+
 \usepackage{fontspec}
 \setmainfont{Atkinson Hyperlegible}
 \setmonofont{JetBrains Mono}
@@ -9,10 +12,9 @@
 \usepackage{graphicx}
 \usepackage{float}
 
-\usepackage[style=numeric]{biblatex}
-\addbibresource{references.bib}
 \usepackage{hyperref}
 \usepackage{titling}
+
 
 \title{P1 - Physics: Lost In Space}
 \author{200007413}
@@ -34,5 +36,4 @@ This project implements a simple arcade game inspired by the classic arcade game
 
 \section{Conclusion and Critical Review}
 
-\end{document}
 \end{document}
